@@ -30,7 +30,7 @@
     
     <groupId>com.speedment.jpastreamer</groupId>
     <artifactId>jpastreamer-parent</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <!-- Project Metadata -->
@@ -74,19 +74,19 @@
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <junit.jupiter.version>5.7.1</junit.jupiter.version>
-        <junit.platform.provider.version>1.7.1</junit.platform.provider.version>
-        <mockito.version>3.8.0</mockito.version>
+        <junit.jupiter.version>5.8.2</junit.jupiter.version>
+        <junit.platform.provider.version>1.8.2</junit.platform.provider.version>
+        <mockito.version>4.1.0</mockito.version>
         <jpa-streamer.version>${project.version}</jpa-streamer.version>
         <speedment-version>3.2.10</speedment-version>
 
         <!-- later maven-javadoc-plugin versions does not support aggregate? -->
         <jpa.version>2.2</jpa.version>
-        <maven-javadoc-plugin-version>3.2.0</maven-javadoc-plugin-version>
+        <maven-javadoc-plugin-version>3.4.0</maven-javadoc-plugin-version>
         <maven-source-plugin-version>3.2.1</maven-source-plugin-version>
-        <maven-dependency-plugin-version>3.1.2</maven-dependency-plugin-version>
-        <maven-shade-plugin-version>3.2.4</maven-shade-plugin-version>
-        <jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
+        <maven-dependency-plugin-version>3.3.0</maven-dependency-plugin-version>
+        <maven-shade-plugin-version>3.3.0</maven-shade-plugin-version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
     </properties>
     
     <organization>
@@ -124,6 +124,9 @@
     </developers>
     
     <contributors>
+        <contributor>
+            <name>Francesco Scuccimarri</name>
+        </contributor>
     </contributors>
 	
     <!-- Distribution Details -->
@@ -161,7 +164,7 @@
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
                     <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>1.6.8</version>
+                    <version>1.6.13</version>
                 </plugin>
 
                 <plugin>
@@ -181,7 +184,7 @@
 
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.2.2</version>
                 </plugin>
 
                 <plugin>
@@ -191,12 +194,12 @@
 
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.0</version>
                 </plugin>
 
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.10.1</version>
                 </plugin>
 
                 <plugin>
@@ -211,7 +214,7 @@
 
                 <plugin>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.9.1</version>
+                    <version>3.12.0</version>
                 </plugin>
 
                 <plugin>
@@ -350,7 +353,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.11.0</version>
                 <configuration>
                     <generateBackupPoms>false</generateBackupPoms>
                 </configuration>
@@ -476,7 +479,7 @@
 
             <plugin>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>enforce</id>
@@ -536,7 +539,7 @@
                         <plugin>
                             <groupId>org.sonatype.plugins</groupId>
                             <artifactId>nexus-staging-maven-plugin</artifactId>
-                            <version>1.6.8</version>
+                            <version>1.6.13</version>
                         </plugin>
                         
                     </plugins>
@@ -561,11 +564,11 @@
 
 
                         <configuration>
-                            <!--                                <source>8</source>-->
-                            <additionalOptions>
-                                <option>--add-modules</option>
+                            <source>8</source>
+<!--                            <additionalOptions>
+                                <option>&#45;&#45;add-modules</option>
                                 <option>${module-name}</option>
-                            </additionalOptions>
+                            </additionalOptions>-->
                             <groups>
                                 <group>
                                     <title>Application</title>
@@ -608,7 +611,7 @@
                     <plugin>
                         <groupId>org.sonarsource.scanner.maven</groupId>
                         <artifactId>sonar-maven-plugin</artifactId>
-                        <version>3.8.0.2131</version>
+                        <version>3.9.1.2184</version>
                     </plugin>
                     
                     <!--The license-maven-plugin plugin MUST BE COMMENTED OUT DURING DEPLOYMENT, otherwise nexus-staging-maven-plugin will fail (sic!)-->
@@ -616,12 +619,12 @@
                     <plugin>
                         <groupId>com.mycila</groupId>
                         <artifactId>license-maven-plugin</artifactId>
-                        <version>3.0</version>
+                        <version>4.1</version>
 
                         <configuration>
                             <header>license_header.txt</header>
                             <properties>
-                                <currentYear>2020</currentYear>
+                                <currentYear>2022</currentYear>
                             </properties>
                             <headerDefinitions>
                                 <headerDefinition>license_header_def.xml</headerDefinition>
@@ -714,7 +717,7 @@
 
                     <plugin>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.0.1</version>
                         
                         <executions>
                             <execution>
@@ -782,7 +785,7 @@
                     <plugin>
                         <groupId>com.mycila</groupId>
                         <artifactId>license-maven-plugin</artifactId>
-                        <version>3.0</version>
+                        <version>4.1</version>
 
                         <configuration>
                             <header>license_header.txt</header>
@@ -1048,7 +1051,7 @@
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-java</artifactId>
-                <version>4.0.0-beta-2</version>
+                <version>4.3.0</version>
                 <scope>test</scope>
             </dependency>
 
